# CmakeHello

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  Circle.cpp  Circle.h  Figure.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
